<resources>
    <string name="app_name">Bantai COVID-19</string>
    <string name="title_home">Beranda</string>
    <string name="title_tips">Tips Menarik</string>
    <string name="title_daerah">List per Daerah</string>

    <string name="call_center_title">Call Center Per Daerah</string>
    <string name="call_center_toast">Memilih daerah</string>

    <string name="appwidget_text" translatable="false">appwidget</string>

    <string name="add_widget" translatable="false">Add widget</string>
    <string name="update_harian_covid_19">Update Harian COVID-19</string>
    <string name="terakhir_diperbaharui_beranda">Terakhir diperbaharui 14 April 2020</string>
    <string name="positif">Positif</string>
    <string name="sembuh">Sembuh</string>
    <string name="meninggal">Meninggal</string>
    <string name="gejala_gejala">Gejala-gejala</string>
    <string name="demam">Demam</string>
    <string name="rasa_lelah">Rasa Lelah</string>
    <string name="batuk_kering">Batuk Kering</string>
    <string name="pilek">Pilek</string>
    <string name="sakit_tenggorokan">Sakit Tenggorokan</string>
    <string name="diare">Diare</string>
    <string name="pencegahan">Pencegahan</string>
    <string name="cuci_tangan">Cuci Tangan</string>
    <string name="jaga_kontak_fisik">Jaga Kontak\n Fisik</string>
    <string name="pakai_masker">Pakai Masker</string>
    <string name="etika_bersin">Etika Bersin</string>
    <string name="tetap_di_rumah">Tetap di\nRumah</string>
    <string name="tidak_sentuh_mulut">Tidak Sentuh\nMulut</string>
    <string name="list_call_center">List Call Center</string>

    <string name="data_penyebaran_daerah_covid_19">Data Penyebaran Daerah COVID-19</string>
    <string name="terakhir_diperbaharui_daerah">Terakhir diperbaharui 14 April 2020</string>
    <string name="provinsi">Provinsi</string>

    <string name="change_language_settings">Ubah Bahasa</string>
    <string name="language_settings">Pengaturan untuk mengubah bahasa aplikasi</string>
    <string name="daily_notification_text">Pengaturan untuk mengaktifkan atau menonaktifkan notifikasi harian</string>
    <string name="daily_notification">Notifikasi Harian</string>


    <string name="daily_notification_on">Notifikasi Harian Hidup</string>
    <string name="daily_notification_off">Notifikasi Harian Mati</string>
    <string name="tips_tips_menarik">Tips - Tips Menarik</string>


    <string-array name="tips_content">
        <item>Pandemi COVID-19 bukan hanya mengancam kesehatan fisik, tetapi juga kesehatan mental. Nah, berikut ini kami bahas cara agar tidak stres selama pandemi COVID-19 yang bikin sistem imun lebih baik.</item>
        <item>Salah satu cara melepas kepenatan dan depresi karena harus di rumah akibat pandemi Covid-19, adalah dengan berkebun. Pelbagai manfaat bisa didapat dari berkebun untuk kesehatan mental dan jiwa. World Health Organization (WHO) menyebut banyak manfaat kesehatan berkebun di luar ruangan. Salah satunya adalah mencegah penyakit kronis tapi tahukah Anda manfaat kesehatan dari berkebun? Berikut rinciannya</item>
        <item>WHO melalui kampanye #healthyathome dan beactive mendorong masyarakat dunia untuk melakukan berbagai aktivitas di rumah. WHO juga merekomendasi untuk aktif selama 30 menit bagi orang dewasa, dan 1 jam untuk anak-anak per hari. Apa saja aktivitas yang bisa kamu lakukan di rumah?</item>
        <item>Pandemi infeksi virus corona atau COVID-19 membuat semua orang harus berdiam di rumah, mulai dari orangtua hingga anak-anak. Para orangtua pun memutar otak untuk mencari aktivitas anak yang menyenangkan dan antibosan, namun tetap memberikan manfaat untuk tumbuh kembang Si Kecil. Apa saja, ya, yang bisa dilakukan? Simak di artikel ini.</item>
        <item>Berpuasa di tengah pandemi virus corona Covid-19 bukanlah perkara mudah. Sebab, tubuh harus menahan rasa lapar dan haus, sekaligus menjaga sistem imun agar terhindar dari berbagai macam virus. Maka dari itu, kenalilah tips puasa di tengah pandemi corona ini, supaya kebugaran dan sistem imun tubuh tetap terjaga terus!</item>
    </string-array>

    <string-array name="tips_drawable">
        <item>@drawable/photo_1</item>
        <item>@drawable/photo_2</item>
        <item>@drawable/photo_3</item>
        <item>@drawable/photo_4</item>
        <item>@drawable/photo_5</item>
    </string-array>

    <string-array name="tips_link">
        <item>https://ilovelife.co.id/blog/8-cara-agar-tidak-stres-selama-pandemi-covid-19-yang-bikin-sistem-imun-lebih-baik/</item>
        <item>https://www.alinea.id/gaya-hidup/manfaat-berkebun-untuk-kesehatan-b1ZMO9tYI</item>
        <item>https://fimela.com/lifestyle-relationship/read/4212462/6-rekomendasi-aktivitas-di-rumah-dari-who-agar-tetap-bugar-dan-sehat</item>
        <item>https://www.sehatq.com/artikel/ide-aktivitas-anak-di-rumah-agar-tak-bosan-selama-wabah-corona</item>
        <item>https://www.sehatq.com/artikel/berbagai-tips-puasa-di-tengah-pandemi-virus-corona-covid-19</item>
    </string-array>

    <string-array name="tips_title">
        <item>8 Cara Agar Tidak Stres Selama Pandemi COVID-19 yang Bikin Sistem Imun Lebih Baik</item>
        <item>Manfaat berkebun saat pandemi terjadi</item>
        <item>6 Rekomendasi Aktivitas di Rumah dari WHO Agar Tetap Bugar dan Sehat</item>
        <item>Anak Bosan Karena Corona? Ajak Lakukan Aktivitas Ini, Yuk!</item>
        <item>Berbagai Tips Puasa di Tengah Pandemi Virus Corona Covid-19</item>
    </string-array>

    <string-array name="provinsi">
        <item>Aceh</item>
        <item>Sumatera Utara</item>
        <item>Sumatera Barat</item>
        <item>Riau</item>
        <item>Jambi</item>
        <item>Sumatera Selatan</item>
        <item>Bengkulu</item>
        <item>Lampung</item>
        <item>Kepulauan Bangka Belitung</item>
        <item>Kepulauan Riau</item>
        <item>DKI Jakarta</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Daerah Istimewa Yogyakarta</item>
        <item>Jawa Timur</item>
        <item>Banten</item>
        <item>Bali</item>
        <item>Nusa Tenggara Barat</item>
        <item>Nusa Tenggara Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Sulawesi Utara</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tenggara</item>
        <item>Gorontalo</item>
        <item>Sulawesi Barat</item>
        <item>Maluku</item>
        <item>Maluku Utara</item>
        <item>Papua</item>
        <item>Papua Barat</item>
    </string-array>

    <string-array name="call_center">
        <item>0651-7319111</item>
        <item>082164902482</item>
        <item>081363478384</item>
        <item>0761-23810</item>
        <item>081273503486</item>
        <item>081271027850</item>
        <item>085268913505</item>
        <item>081274156087</item>
        <item>08117818600</item>
        <item>081378790002</item>
        <item>081388376955</item>
        <item>085697391854</item>
        <item>082313600560</item>
        <item>08112764800</item>
        <item>081334367800</item>
        <item>085215779659</item>
        <item>085792240799</item>
        <item>081805787239</item>
        <item>08113827710</item>
        <item>081292119119</item>
        <item>08125086776</item>
        <item>082157718672</item>
        <item>112</item>
        <item>112</item>
        <item>112</item>
        <item>0811404119</item>
        <item>082154021119</item>
        <item>040-1322896</item>
        <item>081143101000</item>
        <item>081247758484</item>
        <item>081343143438</item>
        <item>0921-6210001</item>
        <item>082197837678</item>
        <item>1500141</item>
    </string-array>

</resources>
